# MoC

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
benchmarks/inference/: benchmark_decode.py  benchmark_ffn_latency.py
benchmarks/memory/: benchmark_memory.py
benchmarks/ppl/: train_c4.py
benchmarks/training/: benchmark_training_latency.py  benchmark_training_throughput.py
configs/: README.md  llama_130m_c4.yaml  llama_130m_c4_k256.yaml  llama_130m_c4_k512.yaml  llama_1b_c4.yaml  llama_350m_c4.yaml  llama_60m_c4.yaml
control/: commands.txt
data/: README.md
docs/: benchmarks.md  method.md  skills.md
examples/: quickstart.py
moc/: __init__.py  config.py  data.py  ffn.py  model.py
moc/inference/: inference_ffn.py  optimized_global_moc_ops.py  raft_topk.py  triton_fused_ffn_kernels.py  triton_gate_topk_kernels.py  triton_gate_up_kernels.py  triton_group8_kernels.py  triton_grouped_moc_ops.py  triton_inference_kernels.py  triton_torch28_op.py  triton_v15_grouplocal_kernels.py
moc/inference/cuda/: optimized_global_moc_ext.cpp  optimized_global_moc_ext.cu
moc/training/: __init__.py  triton_sparse_aux.py
results/: ablations.md  decode.md  inference_ffn.md  memory.md  ppl.md  training_latency.md  training_speed.md
scripts/: run_decode.sh  run_ffn_latency.sh  run_memory.sh  run_ppl.sh  run_training_latency.sh  run_training_throughput.sh
scripts/remote_control/: install.sh  install_system.sh  runner.sh  start_user_daemon.sh  stop_user_daemon.sh  test_local.sh  user_daemon.sh
